Server work and application update
-Send events for stick input

Lock to portrait mode

--- a/remote/android/app/src/main/res/values/strings.xml
+++ b/remote/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Project Hawk</string>
+    <string name="header">HAWK 1.0\n</string>
+    <string name="length">LENGTH: </string>
+    <string name="chunk">CHUNK: </string>
 </resources>
