Add two new activities and change main activity looks
-Throttle will trigger redness on background

--- a/remote/android/app/src/main/res/values/strings.xml
+++ b/remote/android/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="header">HAWK 1.0\n</string>
     <string name="length">LENGTH: </string>
     <string name="chunk">CHUNK: </string>
+    <string name="title_activity_menu">MenuActivity</string>
+    <string name="title_activity_splash">SplashActivity</string>
 </resources>
